# Carbot14

./: DE02Rpi.py  Readme.md  controlledWheels.py  controller.py  displacement.py  lidar.py  position.py  robot.py  talk2de0.py  testDE0.py  threads.py  todolist.py
CAN_cpp_test/: CAN.cc  CAN.hh  Makefile  SPI.cc  SPI.hh  SPI_CAN.hh  SPI_DE0.hh  main.cc
CTRL/: Readme.md
Cpp/: CMakeLists.txt  DualMC33926RPi.h
Cpp/Motors_V0/: DualMC33926RPi.cpp  DualMC33926RPi.h  Makefile  main.cpp
Cpp/Motors_V1/: DualMC33926RPi.cpp  Makefile  main.cpp
Quartus_carbot14/: MyDE0_Nano.asm.rpt  MyDE0_Nano.cdf  MyDE0_Nano.done  MyDE0_Nano.eda.rpt  MyDE0_Nano.fit.rpt  MyDE0_Nano.fit.summary  MyDE0_Nano.flow.rpt  MyDE0_Nano.jdi  MyDE0_Nano.map.rpt  MyDE0_Nano.map.smsg  MyDE0_Nano.map.summary  MyDE0_Nano.qsf  MyDE0_Nano.qws  MyDE0_Nano.sof  MyDE0_Nano.sta.rpt  MyDE0_Nano.sta.summary  MyDE0_Nano.stp  MyDE0_Nano.sv  MySonar.sv  MySonarI2C.sv  MyTestbench.sv
Quartus_sonar/: MySonar.sv  MySonar.sv.bak  MySonarI2C.sv  MyTestbench.sv  i2c_controller.sv  sonar.qsf  sonar.qws
S4_cpp_demo/: contWheels_test.cpp
cpp/: CAN.cpp  DE02Rpi.cpp  DE02Rpi_test.cpp  DualMC33926RPi.cpp  DualMC33926RPi.h  EncCalib.cpp  EncData_test.cpp  Makefile  can_test.cpp  contWheels_test.cpp  controlledWheels.cpp  controlledWheels.h  motor_test.cpp
cpp_minibot/: DE02Rpi.h  DE02Rpi_test.cpp  EncData_test.cpp  contWheels_test.cpp  controlledWheels.cpp  controlledWheels.h  pid.cpp
experiment/: buttons.py
py/: DE02Rpi.py  DemoFirst.py
py_minibot/: DE02Rpi.py  controlledWheels.py  motors.py  threads.py  todolist.py
(+1001 files in other folders)
